[gd_scene load_steps=5 format=3 uid="uid://ctswap7g7ypoa"]

[ext_resource type="Script" path="res://scenes/cards/3d_card_root.gd" id="1_0ktj6"]
[ext_resource type="Shape3D" uid="uid://drnlwnya2k3qa" path="res://scenes/cards/3d_card_root.tres" id="2_h3t3e"]
[ext_resource type="Script" path="res://scenes/cards/fan_root.gd" id="3_qior5"]
[ext_resource type="Texture2D" uid="uid://cjv8kp5ghy4mi" path="res://assets/card_art/card-back-v02.png" id="4_dkp71"]

[node name="3d_card_root" type="Node3D"]
script = ExtResource("1_0ktj6")
click_ready = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.969872, -0.243615, 0, 0.243615, 0.969872, 0, -1.0672, 5.99837)

[node name="Area3D4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.39693, 0, 0)
shape = ExtResource("2_h3t3e")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.299041, 0, 0)
shape = ExtResource("2_h3t3e")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 0)
shape = ExtResource("2_h3t3e")

[node name="Area3D3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.87855, 0, 0)
shape = ExtResource("2_h3t3e")

[node name="Area3D5" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.93287, 0, 0)
shape = ExtResource("2_h3t3e")

[node name="fan_root" type="Node3D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("3_qior5")
target = NodePath(".")

[node name="Sprite3D" type="Sprite3D" parent="fan_root"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.489619, 0)
texture = ExtResource("4_dkp71")

[node name="Sprite3D2" type="Sprite3D" parent="fan_root"]
transform = Transform3D(0.0965926, -0.0258819, 0, 0.0258819, 0.0965926, 0, 0, 0, 0.1, -1, 0.35, 0)
texture = ExtResource("4_dkp71")

[node name="Sprite3D3" type="Sprite3D" parent="fan_root"]
transform = Transform3D(0.0965926, 0.0258819, 0, -0.0258819, 0.0965926, 0, 0, 0, 0.1, 1, 0.350364, 0)
texture = ExtResource("4_dkp71")

[node name="Sprite3D4" type="Sprite3D" parent="fan_root"]
transform = Transform3D(0.0866025, -0.05, 0, 0.05, 0.0866025, 0, 0, 0, 0.1, -2, 0, 0)
texture = ExtResource("4_dkp71")

[node name="Sprite3D5" type="Sprite3D" parent="fan_root"]
transform = Transform3D(0.0866025, 0.05, 0, -0.05, 0.0866025, 0, 0, 0, 0.1, 2, 0, 0)
texture = ExtResource("4_dkp71")

[connection signal="mouse_entered" from="Area3D4" to="." method="_on_area_3d_4_mouse_entered"]
[connection signal="mouse_entered" from="Area3D2" to="." method="_on_area_3d_2_mouse_entered"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_entered" from="Area3D3" to="." method="_on_area_3d_3_mouse_entered"]
[connection signal="mouse_entered" from="Area3D5" to="." method="_on_area_3d_5_mouse_entered"]
